# alphafoundry

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DESIGN.md  LICENSE  README.md  SECURITY.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
.claude/: settings.json
alphafoundry/: chat.py  cli.py  config.py  workspace.py
docs/: AGENT_CORE.md  ARCHITECTURE.md  BENEFITS_APPLICATION_KIT.md  CLI_AGENT_CONTROL_PLANE.md  INTEGRATIONS.md  PRODUCT_SPEC.md  RELEASE.md  RELEASE_CANDIDATE_EVIDENCE.md  ROADMAP.md  UPSTREAM.md  WORKFLOW.md
scripts/: finish-alphafoundry-claude-loop.mjs  overnight-claude-code-loop.mjs  release-static-audit.mjs  run-tests.mjs  smoke-installed.mjs  validate-claude-setup.mjs
src/: cli.js  cli.ts  config.js  config.ts  dependencies.js  doctor.js  netSafety.ts  onboarding.js  onboarding.ts  paths.js  pi-backend.js  provider-defaults.js  redaction.js  redaction.ts  safety.ts  sessions.ts  tui-env.js  tui.js  types.ts  workspace.ts
test/: cli-product.test.js  ink-architecture.test.js  pi-backend.test.js  pi-runtime.test.js  pi-stream.test.js  pi-tool-policy.test.js  redaction-adversarial.test.js  runtime-approval-store.test.js  runtime-control-plane.test.js  runtime-evals.test.js  runtime-evidence.test.js  runtime-permissions.test.js  runtime-replay.test.js  runtime-tool-policy.test.js  tool-pack-executor.test.js  tool-packs.test.js  tui-agent-ready.test.js  tui-commands.test.js  tui-prompt-flow.test.js  tui.test.js
tests/: agentMessages.test.ts  agentRuntimeFoundation.test.ts  cli.test.ts  config.test.ts  (+17 more)
(+123 files in other folders)
